verif/test/deca/context/invalid/print-boolean-verif.res
src/test/deca/context/invalid/print-boolean.deca:10:10: print: invalid argument type 'boolean', expected 'int', 'float', or 'string'
